# csv_parser

./: Cargo.toml  Makefile  README.md  build.mk  builder.dockerfile  pubspec.yaml
android/: build.gradle  settings.gradle
android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/ch/aequitec/csv_parser/: CsvParserPlugin.kt
assets/binary/: libcsv_parser.dylib
ios/: csv_parser.podspec
ios/Classes/: CsvParserPlugin.h  CsvParserPlugin.h.in  CsvParserPlugin.m  SwiftCsvParserPlugin.swift
lib/: csv_parser.dart  csv_parser.h  native.dart
native/: Cargo.toml
native/src/: csv_tool.rs  lib.rs  tests.rs
test/: csv_parser_test.dart  native_wrapper_test.dart
test/data/: BeKB_agenda.csv  CapShare Random Test Data.csv  UploadLegalEntity.csv  UploadNaturalPerson.csv  UploadRegister.csv  Zermatt_Bergbahnen_AG_-_Agenda_Items_2019_Upload.csv  fixedInApp_BeKB.csv  share_register_template.csv  temp.csv
